--- a/src/TwentyFortyEight.Maui/Components/NativeListSeparator.xaml
+++ b/src/TwentyFortyEight.Maui/Components/NativeListSeparator.xaml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="TwentyFortyEight.Maui.Components.NativeListSeparator">
+             xmlns:helpers="clr-namespace:TwentyFortyEight.Maui.Helpers"
+             x:Class="TwentyFortyEight.Maui.Components.NativeListSeparator"
+             Padding="16,0,16,0">
     
-    <BoxView HeightRequest="0.5"
+    <BoxView HeightRequest="{helpers:OnePixel}"
              Color="{AppThemeBinding Light={StaticResource Gray300}, Dark={StaticResource Gray600}}" />
 </ContentView>
