--- a/src/TwentyFortyEight.Maui/Components/IconButton.xaml
+++ b/src/TwentyFortyEight.Maui/Components/IconButton.xaml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:local="clr-namespace:TwentyFortyEight.Maui.Components"
              x:Class="TwentyFortyEight.Maui.Components.IconButton"
-             x:Name="Root">
+             x:Name="Root"
+             x:DataType="local:IconButton">
     <Border
             Stroke="Transparent"
             StrokeThickness="0"
